--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,9 @@
     <!-- =================== FOOTER SECTION =================== -->
     <footer class="footer">
       <div class="social-icons">
-        <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"></a>
-        <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"></a>
-        <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg"></a>
+        <a href="www.linkedin.com/in/ashvin-likhar-7401a5254"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"></a>
+        <a href="https://github.com/asvn-coder"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"></a>
+        
       </div>
       <p class="credit">Made by Ashvin Likhar • © <span id="year"></span></p>
     </footer>
