add redirect link

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <!-- =================== FOOTER SECTION =================== -->
     <footer class="footer">
       <div class="social-icons">
-        <a href="www.linkedin.com/in/ashvin-likhar-7401a5254"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"></a>
+        <a href="https://www.linkedin.com/in/ashvin-likhar-7401a5254/"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"></a>
         <a href="https://github.com/asvn-coder"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg"></a>
         
       </div>
